--- a/oneandthree/css/index.css
+++ b/oneandthree/css/index.css
@@ -413,6 +413,18 @@ section {
     }
 
 }
+@media all and (max-width:1380px) {
+    .swiper-slide>div>img:nth-child(1) {
+        width: 14rem;
+    }
+    .swiper-slide>div:hover img:nth-child(1){
+        width: 16rem;
+    }
+    .swiper-slide>div>img:nth-child(2) {
+        width: 4rem;
+    
+    }
+}
 @media all and (max-width:1280px) {
     .header_left {
         width: 70%;
@@ -423,8 +435,19 @@ section {
     .main_banner_quick {
         right: 5%;
     }
+    .swiper-slide>div>img:nth-child(1) {
+        width: 12rem;
+    }
+    .swiper-slide>div:hover img:nth-child(1){
+        width: 14rem;
+    }
+    .swiper-slide>div>img:nth-child(2) {
+        width: 3rem;
+    
+    }
 
 }
+
 @media all and (max-width:1024px) {
     .main_banner_ImgControl>div {
         width: 0.5rem;
@@ -434,6 +457,28 @@ section {
         bottom: -15%;
         height: 22%;
     }
+    .swiper-slide>div>img:nth-child(1) {
+        width: 10rem;
+    }
+    .swiper-slide>div:hover img:nth-child(1){
+        width: 12rem;
+    }
+    .swiper-slide>div>img:nth-child(2) {
+        width: 3rem;
+    
+    }
+}
+@media all and (max-width:990px) {
+    .swiper-slide>div>img:nth-child(1) {
+        width: 8rem;
+    }
+    .swiper-slide>div:hover img:nth-child(1){
+        width: 10rem;
+    }
+    .swiper-slide>div>img:nth-child(2) {
+        width: 2rem;
+    
+    }
 }
 @media all and (max-width:890px) {
     .menuberList_liCh>ul>li {
@@ -441,11 +486,22 @@ section {
         text-align: center;
         margin-bottom: 1rem;
     }
+    .swiper-slide>div>img:nth-child(1) {
+        width: 7rem;
+    }
+    .swiper-slide>div:hover img:nth-child(1){
+        width: 9rem;
+    }
+    .swiper-slide>div>img:nth-child(2) {
+        width: 2rem;
+    
+    }
 }
 @media all and (min-width:689px) {
     .menuberList_li:hover .menuberList_liCh{
         display: block;
     }
+    
 }
 @media all and (max-width:690px) {
     .header_left {
@@ -487,6 +543,16 @@ section {
         padding-top: 4rem;
     }
     .main_banner_quick {
-display: none;
+        display: none;
     }
+    /* .swiper-slide>div>img:nth-child(1) {
+        width: 5rem;
+    }
+    .swiper-slide>div:hover img:nth-child(1){
+        width: 7rem;
+    }
+    .swiper-slide>div>img:nth-child(2) {
+        width: 2rem;
+    
+    } */
 }
