--- a/oneandthree/css/index.css
+++ b/oneandthree/css/index.css
@@ -35,7 +35,7 @@ ul {
 }
 .wrapTop>header {
     width: 96%;
-    padding: 1% 2% 0% 2%;
+    padding: 1% 2%;
     display: flex;
     justify-content: center;
     /* border: #6d4720 1px solid; */
@@ -183,12 +183,15 @@ nav {
 }
 /* -------------main 영역 --------------*/
 main {
-    width: 100%;
     position: relative;
+    width: 100%;
 }
 .main_banner_ImgWrap {
     width: 100%;
     border: #0f7b3a;
+    position: relative;
+    overflow: hidden;
+
 }
 .main_banner_Imgbox {
     width: 100%;
@@ -268,14 +271,17 @@ section {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    margin-top: 5%;
 }
 .main_ml_topLeft {
     width: 60%;
     text-align: left;
+    position: relative;
+}
+.main_ml_topLeft>h2 {
     font-family: 'Y_Spotlight';
     font-size: larger;
-    position: relative;
-
+    margin: 0;
 }
 .main_ml_topLeft::after {
     position: absolute;
@@ -291,19 +297,20 @@ section {
 }
 .main_ml_topRight {
     width: 40%;
-    text-align: right;
 }
 .main_ml_topRight>ul {
-    clear: both;
-    text-align: right;
+    display: flex;
+    justify-content: right;
+    
 }
 .main_ml_topRight>ul>a {
     margin: 0% 1%;
-    float: left;
+
 }
 .main_ml_topRight>ul>a>li {
     font-size: small;
     position: relative;
+    font-family: 'Y_Spotlight';
 }
 .main_ml_topRight>ul>a>li::before {
     position: absolute;
@@ -317,6 +324,7 @@ section {
 .main_menulist_bottom {
     width: 90%;
     padding: 5% 5%;
+    margin-bottom: 5%;
 }
 .main_ml_bottom_cl {
     width: 100%;
@@ -396,7 +404,6 @@ section {
     top: 20%;
     left: 34%;
     width: 5rem;
-
 }
 .wrapBottom {
     width: 96%;
@@ -404,7 +411,154 @@ section {
     height: 2000px;
     background-color: #ea9c2a;
 }
+
+
+.oat {
+    width: 90%;
+    padding: 5%;
+}
+.oat>div {
+    display: flex;
+    justify-content: center;
+    
+}
+.oat_top {
+    margin-bottom: 2%;
+}
+.oat_HowToUse {
+    width: 20rem;
+    height: 15rem;
+    background-color: #0f7b3a;
+    margin-right: 7%;
+    border-radius: 30px 0 30px 30px;
+}
+.oat_HowToUse>p:nth-child(1) {
+    margin: 10% 10%;
+    font-family: 'Y_Spotlight';
+    font-size: larger;
+    color: #cfcfcf;
+}
+.oat_HowToUse>p:nth-child(2) {
+    margin-top: 30%;
+    margin-left: 10%;    
+    width: 30%;
+    text-align: center;
+    padding: 2%;
+    font-family: 'Y_Spotlight';
+    color: #cfcfcf;
+    border: #cfcfcf solid 1px;
+    border-radius: 15px;  
+}
+.oat_HowToUse>p:nth-child(2):hover {
+    background-color: #cfcfcf;
+    color: #0f7b3a;
+}   
+.oat_history {
+    width: 30rem;
+    height: 15rem;
+    background-color: #6d4720;
+    border-radius: 30px 0 30px 0;
+    clear: both;
+}
+.oat_history>div {
+    float: left;
+    width: 50%;
+    height: 50%;
+}
+.oat_history>div>img {
+    width: 100%;
+}
+.oat_history>div:nth-child(1) {
+    width: 15rem;
+    height: 15rem;
+}
+.oat_history>div:nth-child(2) {
+    width: 15rem;
+    height: 15rem;
+}
+.oat_history>div:nth-child(2)>p:nth-child(1) {
+    margin: 10% 5%;
+    font-family: 'Y_Spotlight';
+    font-size: larger;
+    color: #cfcfcf;
+}
+.oat_history>div:nth-child(2)>p:nth-child(2) {
+    margin: 0;
+    margin-top: 45%;
+    margin-left: 5%;
+    width: 50%;
+    text-align: center;
+    padding: 2%;
+    font-family: 'Y_Spotlight';
+    color: #cfcfcf;
+    border: #cfcfcf solid 1px;
+    border-radius: 15px;  
+}
+.oat_history>div:nth-child(2)>p:nth-child(2):hover {
+    background-color: #cfcfcf;
+    color: #6d4720;
+}
+
+.oat_history>div>img {
+    width: 100%;
+    height: 100%;
+}
+.oat_bottom {
+    clear: both;
+}
+.oat_news {
+    width: 35rem;
+    height: 15rem;
+    margin-top: 2%;
+    margin-right: 5%;
+    clear: both;
+    background-color: #f3f6c8;
+    border: #c31a1f solid 1px;
+}
+.oat_news>div {
+    float: left;
+}
+.board_head {
+    width: 40%;
+    text-align: left;
+    position: relative;
+
+}
+.board_list {
+    width: 60%;
+}
+.board_head>h2 {
+    font-family: 'Y_Spotlight';
+    font-size: larger;
+    margin: 0;
+    z-index: 2;
+}
+.board_head>h2::after {
+    position: absolute;
+    content: "";
+    background-color: #c31a1f;
+    border: solid transparent;
+    border-radius: 50% 0% 50% 0%;
+    width: 1.5rem;
+    height: 1.5rem;
+    z-index: -1;
+    left: -2%;
+    top: -15%;
+}
+.oat_baner {
+    border: #ea9c2a solid 1px;
+    width: 15rem;
+    height: 15rem;
+    padding: 2%;
+}
+.oat_baner>img {
+    width: 100%;
+}
 @media all and (max-width:1480px) {
+    .main_banner_Imgbox>a>img {
+        width: 112%;
+        margin-left: -6%;
+    }
     .main_banner_quick>div>span{
         font-size: smaller;
         word-break: keep-all;
@@ -448,6 +602,10 @@ section {
 }
 
 @media all and (max-width:1024px) {
+    .main_banner_Imgbox>a>img {
+        width: 132%;
+        margin-left: -16%;
+    }
     .main_banner_ImgControl>div {
         width: 0.5rem;
         height: 0.5rem;
@@ -464,10 +622,12 @@ section {
     }
     .swiper-slide>div>img:nth-child(2) {
         width: 3rem;
-    
     }
 }
 @media all and (max-width:990px) {
+    .main_banner_Imgbox>a>img {
+        margin-left: -18%;
+    }
     .swiper-slide>div>img:nth-child(1) {
         width: 8rem;
     }
@@ -480,10 +640,14 @@ section {
     }
 }
 @media all and (max-width:890px) {
+    .main_ml_topRight>ul>a>li {
+        font-size: x-small;
+    }
     .menuberList_liCh>ul>li {
         word-break: keep-all;
         text-align: center;
         margin-bottom: 1rem;
+        font-size: small;
     }
     .swiper-slide>div>img:nth-child(1) {
         width: 7rem;
@@ -495,6 +659,7 @@ section {
         width: 2rem;
     
     }
+
 }
 @media all and (min-width:689px) {
     .menuberList_li:hover .menuberList_liCh{
@@ -514,6 +679,8 @@ section {
     }
     .menu_btn {
         display: block;
+        top: 15%;
+        left: 0%;
     }
     nav {
         height: auto;
@@ -540,6 +707,18 @@ section {
 
     .wrapCenter {
         padding-top: 4rem;
+    }
+    .main_menulist_top {
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .main_ml_topLeft {
+        width: 100%;
+        font-size: medium;
+    }
+    .main_ml_topRight {
+        width: 100%;
+        margin-top: 1rem;
     }
     .main_banner_quick {
         display: none;
