--- a/oneandthree/css/index.css
+++ b/oneandthree/css/index.css
@@ -223,12 +223,12 @@ main {
 }
 .main_banner_quick {
     position: absolute;
-    width: 30%;
+    width: 40%;
     height: 15%;
     display: flex;
     border: #0f7b3a;
     bottom: -10%;
-    right: 20%;
+    right: 10%;
 }
 .main_banner_quick>div{
     padding: 2% 5%;
@@ -405,13 +405,6 @@ section {
     left: 34%;
     width: 5rem;
 }
-.wrapBottom {
-    width: 96%;
-    padding: 2%;
-    height: 2000px;
-    background-color: #ea9c2a;
-}
-
 
 .oat {
     width: 90%;
@@ -430,7 +423,9 @@ section {
     height: 15rem;
     background-color: #0f7b3a;
     margin-right: 7%;
-    border-radius: 30px 0 30px 30px;
+    border: transparent solid 1px;
+    border-radius: 30px 0 30px 0;
+    box-shadow: 5px 11px 4px 0px #c9cbaf;
 }
 .oat_HowToUse>p:nth-child(1) {
     margin: 10% 10%;
@@ -441,7 +436,7 @@ section {
 .oat_HowToUse>p:nth-child(2) {
     margin-top: 30%;
     margin-left: 10%;    
-    width: 30%;
+    width: 50%;
     text-align: center;
     padding: 2%;
     font-family: 'LeferiPoint-BlackObliqueA';
@@ -457,7 +452,9 @@ section {
     width: 30rem;
     height: 15rem;
     background-color: #6d4720;
+    border: transparent solid 1px;
     border-radius: 30px 0 30px 0;
+    box-shadow: 5px 11px 4px 0px #c9cbaf;
     clear: both;
 }
 .oat_history>div {
@@ -479,14 +476,14 @@ section {
 .oat_history>div:nth-child(2)>p:nth-child(1) {
     margin: 10% 5%;
     font-family: 'LeferiPoint-BlackObliqueA';
-    font-size: larger;
+    font-size: large;
     color: #cfcfcf;
 }
 .oat_history>div:nth-child(2)>p:nth-child(2) {
     margin: 0;
-    margin-top: 45%;
+    margin-top: 30%;
     margin-left: 5%;
-    width: 50%;
+    width: 52%;
     text-align: center;
     padding: 2%;
     font-family: 'LeferiPoint-BlackObliqueA';
@@ -512,8 +509,10 @@ section {
     margin-top: 2%;
     margin-right: 5%;
     clear: both;
-    background-color: #f3f6c8;
-    border: #c31a1f solid 1px;
+    border: transparent solid 1px;
+    border-radius: 30px 0 30px 0;
+    box-shadow: 5px 11px 4px 0px #c9cbaf;
+    
 }
 .oat_news>div {
     float: left;
@@ -522,16 +521,17 @@ section {
     width: 40%;
     text-align: left;
     position: relative;
-
-}
-.board_list {
-    width: 60%;
 }
 .board_head>h2 {
     font-family: 'LeferiPoint-BlackObliqueA';
     font-size: larger;
     margin: 0;
     z-index: 2;
+}
+.board_head>p {
+    font-family: 'LeferiPoint-BlackObliqueA';
+    color: #0f7b3a;
+    font-size: large;
 }
 .board_head>h2::after {
     position: absolute;
@@ -542,18 +542,55 @@ section {
     width: 1.5rem;
     height: 1.5rem;
     z-index: -1;
-    left: -2%;
-    top: -15%;
+    left: -6%;
+    top: -5%;
 }
-.oat_baner {
-    border: #ea9c2a solid 1px;
+.board_list {
+    width: 60%;
+}
+.board_list>ul {
+    margin-top: 10%;
+}
+.board_list>ul>li {
+    list-style-type: circle;
+}
+.board_list>ul>li>a {
+    font-family: 'LeferiPoint-BlackObliqueA';
+}
+.board_list>ul>li>:hover {
+    background-color: #d5d6bd;
+}
+.board_list>a {
+    background-color: #c9cbaf;
+    border: transparent 5px solid;
+    border-radius: 25px;
+    padding: 0% 1%;
+    text-align: center;
+    display: block;
+    width: 20%;
+    margin: 3%;
+}
+
+.oat_banner {
+    border: transparent solid 1px;
+    border-radius: 30px 0 30px 0;
+    box-shadow: 5px 11px 4px 0px #c9cbaf;
     width: 15rem;
     height: 15rem;
     padding: 2%;
+    
 }
-.oat_baner>img {
+.oat_banner>img {
     width: 100%;
 }
+
+.wrapBottom {
+    width: 96%;
+    padding: 2%;
+    background-color: #ea9c2a;
+}
+
+
 @media all and (max-width:1480px) {
     .main_banner_Imgbox>a>img {
         width: 112%;
@@ -584,9 +621,6 @@ section {
     }
     .header_right {
         width: 22%;
-    }
-    .main_banner_quick {
-        right: 5%;
     }
     .swiper-slide>div>img:nth-child(1) {
         width: 12rem;
@@ -636,7 +670,64 @@ section {
     }
     .swiper-slide>div>img:nth-child(2) {
         width: 2rem;
-    
+    }
+    .oat_HowToUse {
+        width: 15rem;
+        height: 10rem;
+        margin-right: 5%;
+    }
+    .oat_HowToUse>p:nth-child(1) {
+        font-size: medium;
+    }
+    .oat_HowToUse>p:nth-child(2) {
+        margin-top: 18%;
+        margin-left: 10%;    
+        width: 50%;
+        text-align: center;
+        padding: 2%;
+        font-family: 'LeferiPoint-BlackObliqueA';
+        color: #cfcfcf;
+        border: #cfcfcf solid 1px;
+        border-radius: 15px;  
+    }
+    .oat_history {
+        width: 30rem;
+        height: 10rem;
+    }
+    .oat_history>div:nth-child(1) {
+        width: 10rem;
+        height: 10rem;
+    }
+    .oat_history>div:nth-child(2) {
+        width: 14rem;
+        height: 10rem;
+    }
+    .oat_history>div:nth-child(2)>p:nth-child(1) {
+        margin: 10% 0%;
+    }
+    .oat_history>div:nth-child(2)>p:nth-child(2) {
+        margin: 0;
+        margin-top: 18%;
+        margin-left: 5%;
+    }
+    .oat_news {
+        width: 35rem;
+        height: 10rem;
+        margin-top: 2%;
+        margin-right: 2%;
+        clear: both;
+        border: transparent solid 1px;
+        border-radius: 30px 0 30px 0;
+        box-shadow: 5px 11px 4px 0px #c9cbaf;
+        
+    }
+    .oat_banner {
+        border: transparent solid 1px;
+        border-radius: 30px 0 30px 0;
+        box-shadow: 5px 11px 4px 0px #c9cbaf;
+        width: 10rem;
+        height: 10rem;
+        padding: 2%;
     }
 }
 @media all and (max-width:890px) {
@@ -726,14 +817,7 @@ section {
     .main_banner_quick {
         display: none;
     }
-    /* .swiper-slide>div>img:nth-child(1) {
-        width: 5rem;
+    .oatWrap {
+        display: none;
     }
-    .swiper-slide>div:hover img:nth-child(1){
-        width: 7rem;
-    }
-    .swiper-slide>div>img:nth-child(2) {
-        width: 2rem;
-    
-    } */
 }
