--- a/oneandthree/css/index.css
+++ b/oneandthree/css/index.css
@@ -252,15 +252,17 @@ main {
     background-color: #0f7b3a;
     color: #ea9c2a;
 }
-.main_banner_quick>div>img {
-    width: 2rem;
+.main_banner_quick>div:nth-child(1)>img {
+    width: 1rem;
+}
+.main_banner_quick>div:nth-child(2)>img {
+    width: 1.5rem;
 }
 /* -------------section 영역 --------------*/
 section {
     width: 100%;
     position: relative;
-    border: #ea9c2a 2px solid;
-    margin: 5% 0;
+    margin: 2% 0;
 }
 /* main_menulistWrap Swiper */
 .main_menulistWrap {
@@ -408,7 +410,10 @@ section {
 
 .oat {
     width: 90%;
+    height: auto;
     padding: 5%;
+    background: url("https://i.ibb.co/JkL6c44/images.jpg") no-repeat;
+    background-size: cover;      
 }
 .oat>div {
     display: flex;
@@ -438,7 +443,7 @@ section {
     margin-left: 10%;    
     width: 50%;
     text-align: center;
-    padding: 2%;
+    padding-top: 2%;
     font-family: 'LeferiPoint-BlackObliqueA';
     color: #cfcfcf;
     border: #cfcfcf solid 1px;
@@ -485,7 +490,7 @@ section {
     margin-left: 5%;
     width: 52%;
     text-align: center;
-    padding: 2%;
+    padding-top: 2%;
     font-family: 'LeferiPoint-BlackObliqueA';
     color: #cfcfcf;
     border: #cfcfcf solid 1px;
@@ -512,28 +517,31 @@ section {
     border: transparent solid 1px;
     border-radius: 30px 0 30px 0;
     box-shadow: 5px 11px 4px 0px #c9cbaf;
-    
+    background-color: #fff;
 }
 .oat_news>div {
     float: left;
 }
 .board_head {
-    width: 40%;
+    width: 30%;
+    padding: 10%;
     text-align: left;
-    position: relative;
+
 }
 .board_head>h2 {
     font-family: 'LeferiPoint-BlackObliqueA';
     font-size: larger;
     margin: 0;
-    z-index: 2;
+    z-index: 5;
+    position: relative;
 }
 .board_head>p {
     font-family: 'LeferiPoint-BlackObliqueA';
-    color: #0f7b3a;
-    font-size: large;
+    color: #8d8d83;
+    font-size: small;
+    text-align: center;
 }
-.board_head>h2::after {
+.board_head>h2::before {
     position: absolute;
     content: "";
     background-color: #c31a1f;
@@ -543,10 +551,11 @@ section {
     height: 1.5rem;
     z-index: -1;
     left: -6%;
-    top: -5%;
+    top: -20%;
 }
 .board_list {
-    width: 60%;
+    width: 40%;
+    padding: 5%;
 }
 .board_list>ul {
     margin-top: 10%;
@@ -556,6 +565,7 @@ section {
 }
 .board_list>ul>li>a {
     font-family: 'LeferiPoint-BlackObliqueA';
+    font-size: small;
 }
 .board_list>ul>li>:hover {
     background-color: #d5d6bd;
@@ -569,6 +579,7 @@ section {
     display: block;
     width: 20%;
     margin: 3%;
+
 }
 
 .oat_banner {
@@ -578,6 +589,7 @@ section {
     width: 15rem;
     height: 15rem;
     padding: 2%;
+    background-color: #fff;
     
 }
 .oat_banner>img {
@@ -589,8 +601,15 @@ section {
     padding: 2%;
     background-color: #ea9c2a;
 }
-
-
+.swiper-button-prev, .swiper-rtl .swiper-button-next {
+    left: 10%;
+}
+.swiper-button-next, .swiper-rtl .swiper-button-prev {
+    right: 10%;
+}
+.swiper-button-next,.swiper-button-prev {
+    z-index: 5;
+}
 @media all and (max-width:1480px) {
     .main_banner_Imgbox>a>img {
         width: 112%;
